# django-wa-htmx

./: .env.example  .gitignore  README.md  build.sh  conftest.py  docker-compose.yml  martian.md  pyproject.toml  render.yaml
.martian/: config.json
.martian/scripts/: create-pr.sh  resolve-venv.sh  start-pr.sh
config/: __init__.py  asgi.py  celery.py  urls.py
config/settings/: base.py  local.py  production.py
docs/: web-awesome.md
docs/adr/: 000-template.md
myproject/apps/accounts/: admin.py  models.py  urls.py
myproject/apps/accounts/migrations/: 0001_initial.py
myproject/apps/accounts/views/: __init__.py  logout.py
myproject/apps/www/: urls.py
myproject/apps/www/views/: health.py  home.py  home__test.py
myproject/middleware/: cache_control.py  htmx_errors.py
myproject/testing/: playwright_e2e_testcase.py
static/css/: main.css
templates/: base.html
templates/errors/: generic.html
templates/partials/: error_callout.html
templates/www/: home.html
